<resources>
    <string name="app_name">Game1Project</string>
    <string name="up">Up</string>
    <string name="down">Down</string>
    <string name="correct_the_direction">Correct the direction</string>
    <string name="left">left</string>
    <string name="right">Right</string>
    <string name="ClickSquare">Click the Orange Button 3 times and Click the Green Button 5 times</string>
    <string name="Introduction">Welcome to the game, Please enter your name, and click start button</string>
    <string name="start">Start</string>
    <string name="score">Score:</string>
    <string name="name">Name</string>
    <string name="title_activity_stage_alex1">Stage_Alex1</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


    <string name="course_name">Your Path Towards Success</string>
    <string name="my_name">The Hardest Question?</string>
    <string name="student_id">Calculate Sin-Cos-Tangent?</string>
    <string name="et_hints">PYTHAGORAS THEOREM</string>
    <string name="tv2">tv2</string>
    <string name="tv1">tv1</string>
    <string name="btn1">Steps to Solution</string>
    <string name="Java">Calculator</string>
    <string name="btn_next">Ask Mr.Google</string>
    <string name="btn_next_text">TRY NEXT GAME</string>


    <string name="stage_alex_qt">Select the most valuable !</string>
</resources>